autocomplete based on gvr
